src/styles/global.css
/* src/styles/globals.css */

html {
  scroll-behavior: smooth;
  background-color: #000000;
}

/* Body styling */
body {
  font-family: 'DMSans', sans-serif;
  margin: 0;
  padding: 0;
  text-align: left;
  background-color: var(--bg-primary);
  color: var(--text-primary);
  word-wrap: break-word;
  overflow-wrap: break-word;
  font-size: 20px;
  line-height: 2.2;
  transition:
    background-color 200ms ease,
    color 200ms ease;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: 'Bytesized', monospace;
}

@layer components {
  .page-container {
    @apply max-w-3xl px-6 py-10 md:px-4 mx-auto w-full;
  }
}

